# autoqml

./: .gitignore  LICENSE  README.md  TUTORIAL.md  pyproject.toml  requirements.txt
autoqml_lib/: automl.py  constants.py  messages.py
autoqml_lib/backend/: __init__.py  analysis.py  utils.py
autoqml_lib/meta_learning/: datastatistics.py  meta_learning.py
autoqml_lib/optimizer/: evaluation.py  metric.py  optimizer.py  persistence.py
autoqml_lib/search_space/: __init__.py  base.py  util.py
autoqml_lib/search_space/classification/: __init__.py
autoqml_lib/search_space/classification/classic/: decision_tree_classifier.py  gaussian_process_classifier.py  logistic_regression_classifier.py  perceptron.py  random_forest_classifier.py  ridge_classifier.py  svc.py
autoqml_lib/search_space/classification/quantum/: qgpc.py  qnnc.py  qrcc.py  qsvc.py
autoqml_lib/search_space/data_cleaning/imputation/: __init__.py  constant.py  drop.py  mean.py
autoqml_lib/search_space/data_loading/timeseries/: tabularize.py
autoqml_lib/search_space/preprocessing/: no_op.py
autoqml_lib/search_space/preprocessing/dim_reduction/: __init__.py  autoencoder.py  pca.py  tsne.py  umap.py
autoqml_lib/search_space/preprocessing/downsampling/: __init__.py  resampling.py
autoqml_lib/search_space/preprocessing/encoding/: __init__.py  categorical.py  one_hot.py  util.py
autoqml_lib/search_space/preprocessing/rescaling/: __init__.py  min_max_scaling.py  normalization.py  standard_scaling.py
autoqml_lib/search_space/regression/: __init__.py
autoqml_lib/search_space/regression/classic/: decision_tree_regressor.py  gaussian_process_regressor.py  kernel_ridge.py  linear_regressor.py  nnr.py  random_forest_regressor.py  svr.py
autoqml_lib/search_space/regression/quantum/: qgpr.py  qkrr.py  qnnr.py  qrcr.py  qsvr.py
autoqml_lib/util/: context.py
docs/: AutoQML-lib.drawio  api_reference.md  changelog.md  contributing.md  examples.md  getting_started.md  index.md  troubleshooting.md  user_guide.md
src/autoqml/: __init__.py  automl.py  constants.py  messages.py
src/autoqml/backend/: __init__.py  analysis.py  utils.py
src/autoqml/examples/: tabular_classification_example.ipynb
src/autoqml/meta_learning/: datastatistics.py  meta_learning.py
src/autoqml/optimizer/: evaluation.py  metric.py  optimizer.py  persistence.py
src/autoqml/search_space/: __init__.py  base.py  util.py
src/autoqml/search_space/classification/: __init__.py
src/autoqml/search_space/classification/classic/: decision_tree_classifier.py  gaussian_process_classifier.py  logistic_regression_classifier.py  perceptron.py  random_forest_classifier.py  ridge_classifier.py  svc.py
src/autoqml/search_space/classification/quantum/: qgpc.py  qnnc.py  qrcc.py  qsvc.py
src/autoqml/search_space/data_cleaning/imputation/: __init__.py  constant.py  drop.py  mean.py
src/autoqml/search_space/data_loading/timeseries/: tabularize.py
src/autoqml/search_space/preprocessing/: no_op.py
src/autoqml/search_space/preprocessing/dim_reduction/: __init__.py  autoencoder.py  pca.py  tsne.py  umap.py
src/autoqml/search_space/preprocessing/downsampling/: __init__.py  resampling.py
src/autoqml/search_space/preprocessing/encoding/: __init__.py  categorical.py  one_hot.py  util.py
src/autoqml/search_space/preprocessing/rescaling/: __init__.py  min_max_scaling.py  normalization.py  standard_scaling.py
src/autoqml/search_space/regression/: __init__.py
src/autoqml/search_space/regression/classic/: decision_tree_regressor.py  gaussian_process_regressor.py  kernel_ridge.py  linear_regressor.py  nnr.py  random_forest_regressor.py  svr.py
src/autoqml/search_space/regression/quantum/: qgpr.py  qkrr.py  qnnr.py  qrcr.py  qsvr.py
src/autoqml/util/: context.py  singleton.py
tests/: conftest.py  test_automl.py  test_configurations.py  test_data_tab.py  test_optimizer.py  test_sample_configuration.py  test_search_space.py  test_uc_keb.py  test_uc_zeppelin.py
