[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "autoqml"
version = "0.1.2"
description = "A framework for automated QML"
readme = "README.md"
authors = [
    { name = "Dennis Klau", email = "dennis.klau@iao.fraunhofer.de" },
    { name = "Dennis Kleinhans", email = "dennis.kleinhans@ipa.fraunhofer.de" },
    { name = "David Kreplin", email = "david.kreplin@ipa.fraunhofer.de" },
    { name = "Milan Marinov", email = "milan.marinov@usu.com" },
    { name = "Daniel Pranjic", email = "daniel.pranjic@iao.fraunhofer.de" },
    { name = "Andreas Röpnack", email = "andreas.roepnack@usu.com" },
    { name = "Marco Roth", email = "marco.roth@ipa.fraunhofer.de" },
    { name = "Moritz Willmann", email = "moritz.willmann@ipa.fraunhofer.de" },
    { name = "Marc Zoeller", email = "marc.zoeller@usu.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "pandas (>=2.0.2,<3.0.0)",
    "ray[tune] (>=2.4.0,<3.0.0)",
    "squlearn (>=0.8.2)",
    "rustworkx (>=0.12.0)",
    "tune-sklearn (>=0.4.5,<1.0.0)",
    "scikit-learn (>=1.2.2,<2.0.0)",
    "protobuf (>=3.20,<4.0)",
    "umap-learn (>=0.5.3,<1.0.0)",
    "optuna (>=3.3.0,<4.0.0)",
    "matplotlib (>=3.8.1,<4.0.0)",
    "dill (>=0.3.7,<1.0.0)",
    "lightning (>=2.2.0.post0,<3.0.0)",
    "numpy (<2.0)"
]
requires-python=">=3.9,<3.11"

[project.optional-dependencies]
test = [
    "pytest (>=7.4.0,<8.0.0)"
]

dev = [
    "debugpy (>=1.6.7,<2.0.0)",
    "yapf (>=0.40.1,<1.0.0)",
    "mypy (>=1.4.1,<2.0.0)",
    "pylint (>=2.17.4,<3.0.0)",
    "python-lsp-server[pylint, yapf] (>=1.7.4,<2.0.0)",
    "pylsp-mypy (>=0.6.7,<1.0.0)",
    "pyls-isort (>=0.2.2,<1.0.0)",
    "flake8 (>=6.0.0,<7.0.0)",
    "ipython (>=8.14.0,<9.0.0)",
    "jupytext (>=1.15.2,<2.0.0)",
    "jupyterlab (>=4.0.8,<5.0.0)",
    "ipywidgets (>=8.1.1,<9.0.0)",
    "setuptools (<70.0)"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.yapf]
based_on_style = "facebook"
column_limit = 79

[tool.pylint.'FORMAT']
indent-after-paren = 4
indent-string = '    '
max-line-length = 79
docstring-min-length = 5
